# dask-data-pipeline

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
data/processed/: ppd_data (2).csv:Zone.Identifier
data/processed/test_output.json/: 0.part
data/raw/: test_data.csv
processing/: columns.py  data_pipeline.py
tests/: test_price_paid_data.py
