[tool.poetry]
name = "price_paid_data"
version = "0.1.0"
description = ""
authors = ["John <tj.anih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
apache-beam = "^2.31.0"
pandas = "1.0.5"
dask = "^2021.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
